RESOLVED FIXED43422
[GTK] Incorrect keyIdentifier for print screen key events
https://bugs.webkit.org/show_bug.cgi?id=43422
Summary [GTK] Incorrect keyIdentifier for print screen key events
Martin Robinson
Reported 2010-08-03 08:00:32 PDT
The keyIdentifier string for print screen key events is "U+0000" instead of "PrintScreen."
Attachments
Patch for this issue (2.54 KB, patch)
2010-08-03 08:41 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-08-03 08:07:57 PDT
Martin Robinson
Comment 2 2010-08-03 08:41:42 PDT
Created attachment 63337 [details] Patch for this issue
Martin Robinson
Comment 3 2010-08-03 11:57:06 PDT
Comment on attachment 63337 [details] Patch for this issue Clearing flags on attachment: 63337 Committed r64573: <http://trac.webkit.org/changeset/64573>
Martin Robinson
Comment 4 2010-08-03 11:57:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.