2010-08-03  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Ojan Vafai.

        [GTK] Incorrect keyIdentifier for print screen key events
        https://bugs.webkit.org/show_bug.cgi?id=43422

        Unskip a test which is now passing.

        * platform/gtk/Skipped:
2010-08-03  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Ojan Vafai.

        [GTK] Incorrect keyIdentifier for print screen key events
        https://bugs.webkit.org/show_bug.cgi?id=43422

        Produce the correct keyIdentifier for GDK_Print (print screen).

        * platform/gtk/KeyEventGtk.cpp:
        (WebCore::keyIdentifierForGdkKeyCode):

Canonical link: https://commits.webkit.org/55395@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64573 268f45cc-cd09-0410-ab3c-d52691b4dbfc